# Portfolio-Projects

./: .gitattributes  .githubworkflowsci-notebooks.yml  .gitignore  LICENSE  PROJECT_SKILLS_SUMMARY.txt  Portfolio.code-workspace  README.md  VSCode_Profile_Portfolio.code-profile  environment.yml  open_project.ps1  portfolio_audit.ps1  requirements.txt  show_structure.ps1
.devcontainer/: README.md  devcontainer.json
Core/Supply_Chain_Logistics/SCM-01_forecasting_inventory_policies/: .gitignore  README.md  SCM-01_Project_Overview.md  SCM-01_governance_snapshot.md  SCM-01_handoff_todo.md  SCM-01_lessons_log.md  config.yaml  lessons_log.md  notes.md  pyproject.toml
Core/Supply_Chain_Logistics/SCM-01_forecasting_inventory_policies/notebooks/: 01_scm01_forecast_policy_sim.ipynb
Core/Supply_Chain_Logistics/SCM-01_forecasting_inventory_policies/src/: bootstrap.py  forecasting.py  inventory.py  main.py  simulation.py
Core/Supply_Chain_Logistics/SCM-01_forecasting_inventory_policies/tests/: test_config.py
_Archive/: README (2).md  README.md  rename_portfolio.ps1  reorg_portfolio.ps1
_Reference/: Industry Insights.txt  git repo setup.txt
_reports/: portfolio_tree_20251014_122104.txt  portfolio_tree_20251014_123613.txt  portfolio_tree_20251014_125055.txt  portfolio_tree_20251014_125714.txt  rename_candidates_20251014_125055.csv  rename_candidates_20251014_125714.csv
_tools/: README.md  check_environment.ipynb  check_portfolio.ps1  check_portfolio_integrity.py  init_notebook.ps1  list_project.ps1  nb_sanity_cell.py  portfolio_tree.txt  verify_structure.ps1  (+1 more)
(+213 files in other folders)
