[project]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "statsmodels==0.14.4",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true              # <-- belongs here (global)
unsafe-fixes = false    # optional safety

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]  # pycodestyle/pyflakes/imports/bugbear/pyupgrade
ignore = []                           # add ignores as needed

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
